adding github banner

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="./example/leaflet.draw-src.js"></script>
     <script src="./example/leaflet.box.js"></script>
     <script src="./example/leaflet.arc.js"></script>
-    <script src="./example/leaflet.sector.js"></script>
+    <script src="./leaflet.sector.js"></script>
 	<script src="./example/Leaflet.draw-box.js"></script>
     <script src="./example/Leaflet.draw-arc.js"></script>
     <script src="./example/Leaflet.draw-sector.js"></script>
@@ -29,6 +29,7 @@
 
 <body>
 	<div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
+    <a href="https://github.com/jjwtay/leaflet.sector/"><img style="z-index: 99999 !important; position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 
 	<script>
 		var osmUrl = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
